deps/flashcache/src/include/flashcache.h

/*!\brief Stores the provided value against the provided key and db id
 *
 * The key and value is copied internally. The caller can free them
 * immediately after calling this API.
 */
flashcacheReturnCode flashcachePutItem(uint32_t dbid, char const *key, size_t key_len,
        char const *value, size_t value_len);
/*!\brief Retrieve the value against the provided key and db id
 *
 * The key is copied internally. The caller can free them immediately
 * after calling this API. This is an asynchronous API. Once the value is
 * retrieved from flash, the provided callback is called with the
 * retrieved value. If a value is not found, the provided callback is called
 * with NULL as value.
 */
flashcacheReturnCode flashcacheGetItem(uint32_t dbid, char const *key, size_t key_len,
        flashcacheReadTypes read_type, void *request_context, flashcache_get_item_callback completion_callback);
/*!\brief Runs cron tasks like garbage collection.
 *
 * This API also processes the pending get data requests that are waiting
 * on the data being fetched from flash. The expectation from the caller
 * to invoke this API after every GetItem or PutItem request.
 */
flashcacheReturnCode flashcacheRunCronTasks();
/*!\brief Tear down the current instance of flashcache. */
flashcacheReturnCode flashcacheTearDown();
/*!\brief Delete all keys for a given db id on flashcache layer
 *
 * This API works synchronously so the caller will be blocked while
 * all pending reads complete, pending snapshots get cancelled.
 */
flashcacheReturnCode flashcacheFlushDB(uint32_t dbid);
/*!\brief Delete all keys for all DBs
 *
 * This API works synchronously so the caller will be blocked while
 * all pending reads complete, pending snapshots get cancelled.
 */
flashcacheReturnCode flashcacheFlushAllDBs();
/*!\brief Returns 1 if there are pending cron tasks that needs to be processed immediately else returns 0
 *
 * This API helps the caller know that there are no more pending cron task left at the moment. when this API return
 * 0, the caller can choose to sleep for a small amount of time. This helps the caller to avoid spinning continuously
 * when flashcache do not have any pending cron task. The recommended amount to sleep is <= 50us as a longer sleep
 * will delay starting garbage collection in the database.
 */
int flashcacheShouldRunCronTasksImmediately();
/*!\brief Check if a key exists in the FlashCache index (no disk I/O). */
int flashcacheKeyExists(uint32_t dbid, char const *key, size_t key_len);